Stop header from overlapping the image on each front page section

--- a/_assets/sass/test.sass
+++ b/_assets/sass/test.sass
@@ -283,7 +283,7 @@ h1, h2
     color: #000
     font-size: 72px
     opacity: 0
-    transform: translateY(45px)
+    transform: translateY(25px)
     transition: transform 200ms, opacity 200ms
     transition-delay: 100ms, 100ms
 
@@ -293,7 +293,7 @@ h1, h2
 #team-section.active .header
   h1
     opacity: 1
-    transform: translateY(25px)
+    transform: translateY(0px)
     transition: transform 200ms, opacity 200ms
     transition-delay: 1100ms, 1100ms
 
